// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapper correctly renders when needVanish not passed renders div wrapper 1`] = `
<div>
  <p>
    Hello, world!
  </p>
</div>
`;

exports[`wrapper correctly renders when needVanish passed renders without wrapper 1`] = `
<p>
  Hello, world!
</p>
`;
